--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,39 +1,29 @@
-.new-tweet{
-  margin:0 auto;
+.new-tweet {
+  margin: 0 auto;
 }
-
-.new-tweet{
-  display: none;
+.new-tweet form {
+  display: flex;
+  flex-direction: column;
 }
-
-.new-tweet form{
-  display:flex;
-  flex-direction:column;
-}
-
-.new-tweet textarea{
+.new-tweet textarea {
   font-weight: 700;
   background: transparent;
-  outline:none;
-  border:none;
+  outline: none;
+  border: none;
   border-bottom: 3px solid black;
   padding: 1px;
-  height:1.5em;
+  height: 1.5em;
 }
-
-.new-tweet div{
+.new-tweet div {
   display: flex;
   justify-content: space-between;
   font-family: "Bungee", sans-serif;
   font-display: swap;
-  margin:1em 0;
+  margin: 1em 0;
 }
-.new-tweet button{
+.new-tweet button {
   background-color: #4056A1;
-  color:#FFFFFF;
+  color: #ffffff;
 }
 
-#error-message{
-  color: #D8000C;
-  background-color: #FFD2D2;
-}
+/*# sourceMappingURL=new-tweet.css.map */
