--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,15 +1,16 @@
-header{
-  margin-top:120px;
-  height:400px;
-  display:flex;
-  flex-direction:column;
+header {
+  margin-top: 120px;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  background-color: rgb(187, 187, 218);
-  background-image: url('../images/arabesque.png');
+  background-color: #bbbbda;
+  background-image: url("../images/arabesque.png");
   justify-content: center;
 }
-
 header :first-child {
-  display:flex;
+  display: flex;
   align-self: center;
 }
+
+/*# sourceMappingURL=header.css.map */
