--- a/public/styles/layout.scss
+++ b/public/styles/layout.scss
@@ -17,6 +17,7 @@ html {
  */
 
 body {
+  display:block;
   color: partial.$dark-font-color;
   background-color: #f4f1ec;
   font-size: 24px;
@@ -39,6 +40,7 @@ main{
   header{    
     width:90%;
     margin:5%;
+    border-radius:15px;
   }
 
   main{
