--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,5 +1,5 @@
-header {
-  margin-top: 120px;
+#core > header {
+  margin-top: 80px;
   height: 400px;
   display: flex;
   flex-direction: column;
@@ -8,9 +8,14 @@ header {
   background-image: url("../images/arabesque.png");
   justify-content: center;
 }
-header :first-child {
+#core > header div {
   display: flex;
+  flex-direction: column;
   align-self: center;
+}
+#core > header h2 {
+  text-align: center;
+  margin: 0.7em 0 0 0;
 }
 
 /*# sourceMappingURL=header.css.map */
