--- a/public/styles/header.scss
+++ b/public/styles/header.scss
@@ -1,5 +1,5 @@
-header{
-  margin-top:120px;
+#core > header{
+  margin-top:80px;
   height:400px;
   display:flex;
   flex-direction:column;
@@ -8,8 +8,13 @@ header{
   background-image: url('../images/arabesque.png');
   justify-content: center;
 
-  :first-child {
+  div {
     display:flex;
+    flex-direction: column;
     align-self: center;
   }
-}
+  h2{
+    text-align: center;
+    margin:0.7em 0 0 0;
+  }
+} 
