--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -15,6 +15,7 @@ html {
  * Global layout stuff
  */
 body {
+  display: block;
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
@@ -38,6 +39,7 @@ main {
   header {
     width: 90%;
     margin: 5%;
+    border-radius: 15px;
   }
 
   main {
